--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -771,7 +771,7 @@ ul.menu {
   padding-left: 0;
 }
 .navbar-container .input-group input.form-control {
-  width: 455px;
+  width: 395px;
 }
 .navbar-container .container {
   position: relative;
@@ -1866,9 +1866,8 @@ ul.menu {
   padding-left: 5px;
 }
 .channel .img .c-banner {
-	margin-left:10em;
-  width: 1300px;
-  height: 250px;
+  width: 100%;
+  height: 350px;
 }
 .channel .c-details {
   height: 75px;
@@ -1879,9 +1878,9 @@ ul.menu {
   width: 21%;
   float: left;
   position: relative;
-  padding-top: 5px;
+  padding-top: px;
   font-weight: 500;
-  font-size: 17px;
+  font-size: 20px;
 }
 .channel .c-details .c-name .c-checkbox {
   position: absolute;
@@ -1904,6 +1903,7 @@ ul.menu {
   float: left;
   font-weight: 500;
   padding-top: 4px;
+  padding-left: 45px;
   font-family: 'Hind', sans-serif;
 }
 .channel .c-details .c-nav li {
@@ -1936,7 +1936,7 @@ ul.menu {
 }
 .channel .c-details .c-sub .c-f {
   float: left;
-  width: 86px;
+  width: 95px;
   padding: 5px 10px 0px 10px;
   border: solid 1px #ea2c5a;
   border-top-left-radius: 3px;
